<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.cookielauncher.library.component.view.FCLTextView
        android:id="@+id/title"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_control_view_group_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <com.cookielauncher.library.component.view.FCLLinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cookielauncher.library.component.view.FCLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center"
            android:text="@string/menu_control_view_group_name"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.cookielauncher.library.component.view.FCLEditText
            android:singleLine="true"
            android:textSize="12sp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/name"/>

    </com.cookielauncher.library.component.view.FCLLinearLayout>

    <com.cookielauncher.library.component.view.FCLLinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/visibility_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.cookielauncher.library.component.view.FCLTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center"
            android:text="@string/menu_control_view_group_visibility"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.cookielauncher.library.component.view.FCLSpinner
        app:auto_text_tint="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/visibility"/>

    </com.cookielauncher.library.component.view.FCLLinearLayout>

    <com.cookielauncher.library.component.view.FCLButton
        android:id="@+id/positive"
        android:text="@string/dialog_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visibility_layout"/>

    <com.cookielauncher.library.component.view.FCLButton
        android:id="@+id/negative"
        android:text="@string/dialog_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/visibility_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>