<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cookielauncher.library.component.view.FCLProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.cookielauncher.library.component.view.FCLImageButton
        android:id="@+id/retry"
        android:src="@drawable/ic_baseline_refresh_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.cookielauncher.library.component.view.FCLLinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.cookielauncher.library.component.view.FCLLinearLayout
            app:auto_linear_background_tint="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/bg_container_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cookielauncher.library.component.view.FCLImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/icon"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.cookielauncher.library.component.view.FCLTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:id="@+id/name"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        app:auto_text_tint="true"/>

                    <com.cookielauncher.library.component.view.FCLTextView
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:id="@+id/tag"
                        android:layout_gravity="center"
                        android:singleLine="true"
                        app:auto_text_tint="true"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.cookielauncher.library.component.view.FCLTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:id="@+id/intro"
                    android:singleLine="true"
                    app:auto_text_tint="true"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.cookielauncher.library.component.view.FCLLinearLayout>

        <com.cookielauncher.library.component.view.FCLLinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ListView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:id="@+id/list"/>

            <com.cookielauncher.library.component.view.FCLLinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:orientation="vertical"
                android:background="@drawable/bg_container_white"
                app:auto_linear_background_tint="true">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.cookielauncher.library.component.view.FCLLinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.cookielauncher.library.component.view.FCLLinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="horizontal">

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"
                                android:text="@string/control_info_author"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:id="@+id/author"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"/>

                        </com.cookielauncher.library.component.view.FCLLinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>

                        <com.cookielauncher.library.component.view.FCLLinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="horizontal">

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"
                                android:text="@string/control_info_version"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:id="@+id/version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"/>

                        </com.cookielauncher.library.component.view.FCLLinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>

                        <com.cookielauncher.library.component.view.FCLLinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="horizontal">

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"
                                android:text="@string/control_info_device"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:id="@+id/device"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"/>

                        </com.cookielauncher.library.component.view.FCLLinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@android:color/darker_gray"/>

                        <com.cookielauncher.library.component.view.FCLLinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="vertical">

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                app:auto_text_tint="true"
                                android:text="@string/control_info_description"/>

                            <com.cookielauncher.library.component.view.FCLTextView
                                android:layout_marginTop="10dp"
                                android:id="@+id/description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:auto_text_tint="true"/>

                        </com.cookielauncher.library.component.view.FCLLinearLayout>

                    </com.cookielauncher.library.component.view.FCLLinearLayout>

                </ScrollView>

            </com.cookielauncher.library.component.view.FCLLinearLayout>

        </com.cookielauncher.library.component.view.FCLLinearLayout>

        <com.cookielauncher.library.component.view.FCLLinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.cookielauncher.library.component.view.FCLButton
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ripple="true"
                android:text="@string/control_download_history"
                android:singleLine="true"
                android:id="@+id/history"/>

            <com.cookielauncher.library.component.view.FCLButton
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:ripple="true"
                android:text="@string/control_download_latest"
                android:singleLine="true"
                android:id="@+id/latest"/>

        </com.cookielauncher.library.component.view.FCLLinearLayout>

    </com.cookielauncher.library.component.view.FCLLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
